<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvCamera"
        style="@style/StyleRegular"
        android:layout_width="match_parent"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/take_photo" />

    <TextView
        android:id="@+id/tvGallery"
        style="@style/StyleRegular"
        android:layout_width="match_parent"
        android:background="@drawable/drawable_top_bottom_color_divider_stroke"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/choose_from_gallery" />

    <TextView
        android:id="@+id/tvCancel"
        style="@style/StyleRegular"
        android:layout_width="match_parent"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/cancel" />


</LinearLayout>