<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true">

    <View
        android:id="@+id/viewTop"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:background="@drawable/drawable_gradient_blue_rect_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home_logo"
        app:layout_constraintBottom_toBottomOf="@id/viewTop"
        app:layout_constraintEnd_toEndOf="@id/viewTop"
        app:layout_constraintStart_toStartOf="@id/viewTop" />

    <TextView
        android:id="@+id/tvLetsStart"
        style="@style/StyleSemiBold"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:text="@string/lets_start"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateAccount"
        style="@style/StyleSubmitButton"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:text="@string/create_account"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLetsStart" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        style="@style/StyleSubmitButton"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/drawable_color_white_rounded_corners_solid_bordered"
        android:elevation="8dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorDisabledText"
        app:layout_constraintEnd_toEndOf="@+id/btnCreateAccount"
        app:layout_constraintStart_toStartOf="@+id/btnCreateAccount"
        app:layout_constraintTop_toBottomOf="@id/btnCreateAccount" />


    <TextView
        style="@style/StyleBook"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:gravity="center"
        android:text="@string/terms_conditions"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnCreateAccount"
        app:layout_constraintStart_toStartOf="@+id/btnCreateAccount"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>