<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTransparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/drawable_color_white_rounded_corners_solid">

        <include layout="@layout/toolbar_dialog_fragments" />

        <TextView
            android:id="@+id/tvEnterEmailText"
            style="@style/StyleSemiBold"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/enter_email_to_recover_pwd"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorDisabledText"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/StyleInputEditTextHint"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterEmailText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/StyleInputEditText"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btSubmit"
            style="@style/StyleSubmitButton"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tilEmail"
            app:layout_constraintStart_toStartOf="@id/tilEmail"
            app:layout_constraintTop_toBottomOf="@id/tilEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>