<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTransparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/drawable_color_white_rounded_corners_solid">

        <include layout="@layout/toolbar_dialog_fragments" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOldPassword"
            style="@style/StyleInputEditTextHint"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOldPassword"
                style="@style/StyleInputEditText"
                android:hint="@string/hint_old_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNewPassword"
            style="@style/StyleInputEditTextHint"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="@id/tilOldPassword"
            app:layout_constraintStart_toStartOf="@id/tilOldPassword"
            app:layout_constraintTop_toBottomOf="@id/tilOldPassword"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewPassword"
                style="@style/StyleInputEditText"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btChangePassword"
            style="@style/StyleSubmitButton"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/change"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilNewPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>